[NTP] Show custom background when undoing a theme installation

When undo is pressed on the theme installation info bar the background
should be reset to the selected custom background. To accomplish this
run the same update theme info logic whenever the theme is changed.

Bug: 881750
Change-Id: I1fe5d8d2f8c6d9459a65a4cd801b5583b8f21935
Reviewed-on: https://chromium-review.googlesource.com/1252461
Commit-Queue: Kyle Milka <kmilka@chromium.org>
Reviewed-by: Kristi Park <kristipark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595199}
Former-commit-id: 1751f079222707da44a6f398cc74565afe2f8bd7